# pyrf

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_rf_unix.sh  cmake_install.cmake  index.html  mingw_build.bat  mingw_pyrf_build.bat  parse.py  pyrf.html  pyrf.py  run_tests.py  searchindex.js  setup.py  setup_clang2.sh  test_pyrf.py  train_pyrf.py  train_pyrf_elephant.py  unix_build.sh
_graveyard/: process.py  randomize.py  test_pyrf.py  train_pyrf_giraffe.py  train_pyrf_zebra_grevys.py  train_pyrf_zebra_plains.py  util_stats.py
_modules/: index.html
_modules/pyrf/: _pyrf.html  pyrf_helpers.html
_page/: genindex.html  index.html  objects.inv  py-modindex.html  pyrf.html  search.html  searchindex.js
_page/_modules/: index.html
_page/_modules/pyrf/: _pyrf.html  pyrf_helpers.html
_page/_sources/: index.txt  pyrf.txt
_page/_static/: pygments.css
_sources/: index.txt
_test/: test.py
_test/trees/: tree-000.txt  tree-001.txt  tree-002.txt  tree-003.txt  tree-004.txt  tree-005.txt  tree-006.txt  tree-007.txt  tree-008.txt  tree-009.txt  tree-010.txt  tree-011.txt  tree-012.txt  tree-013.txt  tree-014.txt  tree-015.txt  tree-016.txt  tree-017.txt  tree-018.txt  tree-019.txt  tree-020.txt  tree-021.txt  tree-022.txt  tree-023.txt  tree-024.txt  tree-025.txt  tree-026.txt  tree-027.txt  tree-028.txt  tree-029.txt  tree-030.txt  tree-031.txt  tree-032.txt  tree-033.txt  tree-034.txt  tree-035.txt  tree-036.txt  tree-037.txt  tree-038.txt  tree-039.txt  (+1 more)
_test/trees-zebras/: tree-001.txt  tree-002.txt  tree-003.txt  tree-004.txt  tree-005.txt  tree-006.txt  tree-007.txt  tree-008.txt  tree-009.txt  tree-010.txt  zebra_plains-000.txt  zebra_plains-001.txt  zebra_plains-002.txt  zebra_plains-003.txt  zebra_plains-004.txt  zebra_plains-005.txt  zebra_plains-006.txt  zebra_plains-007.txt  zebra_plains-008.txt  zebra_plains-009.txt
pyrf/: __init__.py  _pyrf.py  pyrf_helpers.py  pyrf_main.py
pyrf/src/: CRForest-Detector-Class.hpp  CRForest.h  CRForestDetector.cpp  CRForestDetector.h  CRPatch.cpp  CRPatch.h  CRTree.cpp  pyrf.cpp
src/: CRForest-Detector-Class-Leafs.hpp  CRForest-Detector-Class.hpp  CRForest.h  CRForestDetector.cpp  CRForestDetector.h  CRPatch.cpp  CRPatch.h  CRTree.cpp  CRTree.h  HoG.cpp  HoG.h  MSR-SSLA.txt  pyrf.cpp  pyrf.h
utils/: util_convert.py  util_iccr.sh  util_stats.py
